# Seracc

./: .gitignore  CMakeLists.txt  Expressions.txt  Ideas.txt  Makefile  OUT.txt  RoadMap.txt  Seracc.cpp  TODO.txt  build.sh  clean.sh  main.sr  temp  temp.c  temp.cpp  test  test.c  test.cpp
Archive/: CEmitter.cpp  CEmitter.hpp  Declarations.hpp  Makefile  Parser.cpp  Parser.hpp  Resolver.cpp  Resolver.hpp  STBlder.hpp  Seracc.cpp  TypeChecker.cpp
Archive/include/: ASTDeclarations.hpp  LexerPrinter.hpp  OperatorPrecedence.hpp  Parser.hpp  SymbolTBlder.hpp  SymbolTPrinter.hpp  TypeChecker.hpp
Archive/src/: Lexer.cpp  SymbolResolver.cpp
Examples/: DynArrEx.serac  SimpleEx.serac
TestFiles/: Test.serac  Test.sr  Test1.sr  Test2.sr  Test3.sr  UnaryAddrOf.sr  VarDecls.sr
include/: ASTDecl.h  ASTDeclarations.hpp  Builtin.h  Builtins.hpp  Declarations.hpp  Lexer.h  Lexer.hpp  LexerPrinter.hpp  OperatorPrecedence.hpp  Parser.hpp  ParserPrinter.hpp  Program.hpp  STBlder.hpp  SeracBuiltins.hpp  SymbolDeclarations.hpp  SymbolResolver.hpp  SymbolTBlder.hpp  SymbolTPrinter.hpp  Token.h  Token.hpp  TypeChecker.hpp
include/TundraContainers/: DynamicArrayBTType.h  DynamicArrayExprPtr.h  DynamicArrayStrVw.h  DynamicArrayTDeclPtr.h  DynamicArrayTypePtr.h  DynamicArrayU64.h
src/: ASTDecl.c  Lexer.c  Lexer.cpp  LexerPrinter.cpp  Parser.cpp  STBlder.cpp  Seracc.c  Seracc.cpp  SymbolResolver.cpp  SymbolTBlder.cpp  TypeChecker.cpp
